ICU-1761 make icu4j compile and run with jdk1.4
X-SVN-Rev: 7928

--- a/.gitattributes
+++ b/.gitattributes
@@ -69,6 +69,7 @@ icu4c/source/samples/ucnv/data02.bin -text
 icu4c/source/test/testdata/importtest.bin -text
 icu4c/source/test/testdata/ja_data.bin -text
 icu4c/source/test/testdata/uni-text.bin -text
+icu4j/src/com/ibm/icu/dev/data/ICULocaleData.jar -text
 icu4j/src/com/ibm/icu/dev/data/holidays_jp.ucs -text
 icu4j/src/com/ibm/icu/dev/data/rbbi/english.dict -text
 icu4j/src/com/ibm/icu/dev/data/thai6.ucs -text
