--- a/.gitattributes
+++ b/.gitattributes
@@ -59,6 +59,7 @@ icu4j/src/com/ibm/icu/dev/data/holidays_jp.ucs -text
 icu4j/src/com/ibm/icu/dev/data/rbbi/english.dict -text
 icu4j/src/com/ibm/icu/dev/data/thai6.ucs -text
 icu4j/src/com/ibm/icu/impl/data/ICULocaleData.jar -text
+icu4j/src/com/ibm/icu/impl/data/invuca.dat -text
 icu4j/src/com/ibm/icu/impl/data/thai_dict -text
 icu4j/src/com/ibm/icu/impl/data/ucadata.dat -text
 icu4j/src/com/ibm/icu/impl/data/unames.dat -text
