--- a/.gitattributes
+++ b/.gitattributes
@@ -60,15 +60,11 @@ icu4j/src/com/ibm/icu/dev/data/holidays_jp.ucs -text
 icu4j/src/com/ibm/icu/dev/data/rbbi/english.dict -text
 icu4j/src/com/ibm/icu/dev/data/thai6.ucs -text
 icu4j/src/com/ibm/icu/impl/data/ICULocaleData.jar -text
-icu4j/src/com/ibm/icu/impl/data/invuca.dat -text
+icu4j/src/com/ibm/icu/impl/data/invuca.icu -text
 icu4j/src/com/ibm/icu/impl/data/thai_dict -text
-icu4j/src/com/ibm/icu/impl/data/ucadata.dat -text
 icu4j/src/com/ibm/icu/impl/data/ucadata.icu -text
-icu4j/src/com/ibm/icu/impl/data/unames.dat -text
 icu4j/src/com/ibm/icu/impl/data/unames.icu -text
-icu4j/src/com/ibm/icu/impl/data/unorm.dat -text
 icu4j/src/com/ibm/icu/impl/data/unorm.icu -text
-icu4j/src/com/ibm/icu/impl/data/uprops.dat -text
 icu4j/src/com/ibm/icu/impl/data/uprops.icu -text
 tools/unicodetools/com/ibm/rbm/docs/images/TitleLogo_transparent.gif -text
 tools/unicodetools/com/ibm/rbm/docs/images/arrow_bullet.gif -text
