--- a/.gitattributes
+++ b/.gitattributes
@@ -503,6 +503,7 @@ icu4j/tools/build/icu4j56.api3.gz -text
 icu4j/tools/build/icu4j57.api3.gz -text
 icu4j/tools/build/icu4j58.api3.gz -text
 icu4j/tools/build/icu4j59.api3.gz -text
+icu4j/tools/build/icu4j60.api3.gz -text
 tools/multi/c/Makefile-c.inc -text
 tools/multi/c/patch/3_0 -text
 tools/multi/c/patch/3_2 -text
