--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ README text !eol
 *.tri2 -text
 
 icu4c/icu4c.css -text
+icu4c/packaging/distrelease.ps1 -text
 icu4c/source/aclocal.m4 -text
 icu4c/source/config/m4/icu-conditional.m4 -text
 icu4c/source/data/curr/pool.res -text
