--- a/.gitattributes
+++ b/.gitattributes
@@ -50,6 +50,7 @@ README text !eol
 
 icu4c/icu4c.css -text
 icu4c/source/aclocal.m4 -text
+icu4c/source/allinone/Windows.CopyUnicodeHeaderFiles.targets -text
 icu4c/source/config/m4/icu-conditional.m4 -text
 icu4c/source/data/curr/pool.res -text
 icu4c/source/data/in/coll/ucadata-implicithan.icu -text
