ICU-22965 Fix the problems we had with the maven deploy for ICU 76.1
The blocker was the missing `<name>` element, which is mandatory
See https://central.sonatype.org/publish/requirements/#project-name-description-and-url

The second problem was that all modules were staged, not just the three we normally publish.

--- a/icu4j/main/charset/pom.xml
+++ b/icu4j/main/charset/pom.xml
@@ -13,6 +13,7 @@
   </parent>
 
   <artifactId>icu4j-charset</artifactId>
+  <name>ICU4J Charset Provider</name>
   <description>icu4j-charset is a supplemental library for icu4j, implementing Java Charset SPI.</description>
   <url>${proj.url}</url>
   <scm>
