--- a/icu4j/pom.xml
+++ b/icu4j/pom.xml
@@ -235,6 +235,9 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.3</version>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
